--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+html, body{
+  scroll-behavior: smooth;
+  font-family: 'Poppins', sans-serif;
+  height:100%;
+}
+*{
+  transition: .3s;
+}
+#root{
+  height: 100%;
+}
+a:hover{
+  text-decoration: none;
+}
+.navbar-expand-sm .navbar-nav .nav-link{
+  padding-left: 1.4rem;
+}
+/* Themeing */
+.btn-primary{
+  background-image: linear-gradient(75deg, #19D3AE,#0fcfec) !important;
+  border-color: transparent !important;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.text-primary{
+  color: #1cc7c1 !important;
+}
+.btn-info{
+  background-color: #76C5FF !important;
+  border-color: transparent !important;
+}
+.btn-warning{
+  background-color: #FFD076 !important;
+  border-color: transparent !important;
+}
+.btn-success{
+  background-color: #38AF86 !important;
+  border-color: transparent !important;
+}
+.btn-danger{
+  background-color: #FF7676 !important;
+  border-color: transparent !important;
+}
+.bg-info{
+  background-color: #3DA5F4 !important;
+}
+.bg-success{
+  background-color: #00C689 !important;
+}
+.bg-warning{
+  background-color: #FDA006 !important;
+}
+.bg-danger{
+  background-color: #F1536E !important;
+}
+p{
+  line-height: 2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-page .form-control{
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid lightgray;
+  padding-right: 0;
+  padding-left: 0;
+}
+.login-page .form-control:focus{
+  box-shadow: none !important;
+  border-bottom: 1px solid #1cc7c1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* width */
+::-webkit-scrollbar {
+  width: 8px !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(251, 251, 251) !important;
+
 }
 
-.App-link {
-  color: #61dafb;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #efefef  !important;;
+  border-radius: 5px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(176, 178, 180)  !important;;
 }
